Fix context menus expanding upwards and getting cut off. Fix being unable to move an item out of a bag if there are no items in the root inventory.

--- a/css/obsidian-main.css
+++ b/css/obsidian-main.css
@@ -148,6 +148,11 @@
 	border: none;
 }
 
+.obsidian .obsidian-tr #context-menu.expand-up {
+	bottom: unset;
+	top: calc(100% + 2px);
+}
+
 .obsidian-col-icon {
 	width: 27px;
 }
